# legged-control-suite

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bipedal_v1_hacking.py  cartpole_hacking.md  cartpole_hacking.py  cheetah_hacking.md  cheetah_hacking.py  dmc_demo.md  dmc_demo.py  dmc_live.py  dmc_vanilla.py  frictiontest.md  frictiontest.py  humanoid_test_cmx.md  humanoid_test_cmx.py
lcs/: __init__.py  bipedal_v1.py  bipedal_v1.xml  frictiontest.py  frictiontest.xml  humanoid_test.py  humanoid_test.xml  paramcartpole.py  paramcartpole.xml  paramcheetah.py  paramcheetah.xml  two-legged-noFoot (model 1).xml
